edit package.json file

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "installation": "echo \"Error: no test specified\" && exit 1"
+    "installation": "npm install"
   },
   "repository": {
     "type": "git",
